# langchain-viscribe

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
examples/: agent_example.py  agent_local_image_example.py  describe_image_example.py  local_image_example.py
langchain_viscribe/: __init__.py
langchain_viscribe/tools/: __init__.py  _utils.py  ask_image.py  classify_image.py  compare_images.py  describe_image.py  extract_image.py  get_credits.py  submit_feedback.py
tests/: __init__.py
tests/integration_tests/: __init__.py  test_tools.py
tests/unit_tests/: __init__.py  mocks.py  test_tools.py
