[project]
name = "langchain-viscribe"
version = "0.1.0"
description = "LangChain integration for ViscribeAI image analysis - AI-powered tools for image understanding"
authors = [
    { name = "ViscribeAI", email = "contact@viscribe.ai" }
]
license = "MIT"
readme = "README.md"
homepage = "https://viscribe.ai/"
repository = "https://github.com/viscribeai/langchain-viscribe"
keywords = [
    "viscribe",
    "viscribeai",
    "ai",
    "image analysis",
    "computer vision",
    "langchain",
    "llm",
    "machine learning",
    "image understanding",
    "visual question answering",
    "vqa",
    "image classification",
    "data extraction",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10,<4.0"

dependencies = [
    "langchain-core>=1.2.0",
    "viscribe>=1.0.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-socket>=0.7.0",
    "pytest-asyncio>=0.24.0",
    "langchain-tests>=0.3.4",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "C"]
ignore = ["E203", "E501", "E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_untyped_defs = true
allow_untyped_decorators = true
allow_subclassing_any = true
disable_error_code = ["misc", "no-any-return", "type-arg", "union-attr", "return-value"]
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"
